fixed padding spacing in footer

--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ ul {
 
 li {
     display: inline;
-    padding: 4px;
+    padding: 8px;
 }
 
 .updated {
